add form.html catalog.html example

--- a/source/index.html
+++ b/source/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="ru">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>HTML Academy: Кэт энерджи</title>
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>HTML Academy: Кэт энерджи</title>
-</head>
-
-<body>
-
-
-</body>
-
+  <body>
+    <header class="main-header">
+      <nav class="main-navigation">
+        <a href="" class="main-navigation__logo-link">
+          <img src="" alt="" class="main-navigation__logo logo">
+        </a>
+      </nav>
+    </header>
+  </body>
 </html>
