--- a/source/index.html
+++ b/source/index.html
@@ -1,18 +1,112 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>HTML Academy: Кэт энерджи</title>
-  </head>
 
-  <body>
-    <header class="main-header">
-      <nav class="main-navigation">
-        <a href="" class="main-navigation__logo-link">
-          <img src="" alt="" class="main-navigation__logo logo">
-        </a>
-      </nav>
-    </header>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>HTML Academy: Кэт энерджи</title>
+</head>
+
+<body>
+  <header class="main-header">
+    <nav class="main-navigation">
+      <a href="" class="main-navigation__logo-link">
+        <img src="" alt="" class="main-navigation__logo logo" />
+        <button class="main-navigation__toggle" type="button"></button>
+      </a>
+    </nav>
+  </header>
+  <main>
+    <section class="intro">
+      <h1 class="intro__title">Функциональное питание для котов</h1>
+      <p class="intro__text">Занялся собой? Займись котом!</p>
+      <img src="" alt="" />
+      <a class="intro__link" href="">Подобрать программу</a>
+    </section>
+
+    <section class="course">
+      <ul class="course__list">
+        <li class="course__item">
+          <h2 class="course__title">Похудени</h2>
+          <p class="course__text">
+            Ваш кот весит больше собаки и почти утратил способность лазить по
+            деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу
+            сбросить лишний вес.
+          </p>
+          <a class="course__link" href="">Каталог Slim</a>
+        </li>
+        <li class="course__item">
+          <h2 class="course__title">Набор массы</h2>
+          <p class="course__text">
+            Заработать авторитет среди дворовых котов и даже собак? Серия Cat
+            Energy Pro поможет вашему коту нарастить необходимые мышцы!
+          </p>
+          <a class="course__link" href="">Каталог pro</a>
+        </li>
+      </ul>
+    </section>
+
+    <section class="advantages">
+      <h2 class="advantages__title"></h2>
+      <ul class="advantages__list">
+        <li class="advantages__item">
+          <p class="advantages__text">
+            Функциональное питание содержит только полезные питательные
+            вещества.
+          </p>
+        </li>
+        <li class="advantages__item">
+          <p class="advantages__text">
+            Выпускается в виде порошка, который нужно лишь залить кипятком и
+            готово.
+          </p>
+        </li>
+        <li class="advantages__item">
+          <p class="advantages__text">
+            Замените один-два приема обычной еды на наше функциональное
+            питание.
+          </p>
+        </li>
+        <li class="advantages__item">
+          <p class="advantages__text">
+            Уже через месяц наслаждайтесь изменениями к лучшему вашего
+            питомца!
+          </p>
+        </li>
+      </ul>
+    </section>
+
+    <!-- <section class="example">
+        <ul class="example__list">
+          <li class="example__item">
+            <strong class="example__fact-number"></strong>
+            <span class="example__fact-text"></span>
+          </li>
+        </ul>
+        <p class="example__result"></p>
+        <section class="slider-result"></section>
+      </section> -->
+
+
+  </main>
+  <footer class="main-header">
+    <div class="header-logo logo">
+      <a class="header-logo__link" href=""><img class="header-logo__img" src="" alt="" /></a>
+    </div>
+    <section class="social">
+      <ul class="social__list">
+        <li class="social__item"><a class="social__link" href=""></a></li>
+        <li class="social__item"><a class="social__link" href=""></a></li>
+        <li class="social__item"><a class="social__link" href=""></a></li>
+      </ul>
+    </section>
+    <section class="copyright">
+      <a href="" class="copyright__link">
+        <span class="copyright__text"></span>
+        <img class="copyright__img" src="" alt="" />
+      </a>
+    </section>
+  </footer>
+</body>
+
 </html>
